--- a/pet.css
+++ b/pet.css
@@ -3,6 +3,11 @@
     Padding: 0;
     Box-sizing: border-box;
     }
+
+body{
+        background-color:lightsteelblue;
+    }
+    
 .cabeca {
     width: 100%;
     height: 100px;
@@ -11,53 +16,42 @@
     justify-content: center;
     align-items: center;
     font-family:'Courier New', Courier, monospace;
-    
-   
-
-
 }
-#t:hover{
-    color:burlywood;
-    font-size: 40px;
 
-    
-   
-}
-a {
+.cabeca a {
     text-decoration:none;
-    color: bisque;
-
-}
-.cat a:hover {
-    color: black;
+    color: white;
 }
 
-
-.cat {
-display: flex;
-align-items: center;
-justify-content: space-evenly;
-background-color: cadetblue;
-height: 100px;
-width: 50%; 
-
-
-
-
-
+#t{
+    color:green;
 }
 
-#dog {
+#t:hover{
+    color:rgb(96, 142, 202);
+    font-size: 40px;   
+}
+
+#catcabecalho {
 width: 90px;
 height: 90px;
 border-radius: 120px;
 margin: 40px;
-
 }
 
-body{
-    background-color: burlywood;
+.cabecalhonav {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: cadetblue;
+    height: 100px;
+    width: 50%;    
 }
+
+.cabecalhonav a:hover {
+        color: aquamarine;
+}
+
 .colunas{
     display: flex;
     justify-content: space-evenly;
@@ -65,21 +59,38 @@ body{
     list-style: none;
 }
 
-.catalago{
+.fotopet{
     height: 150px;
     width: 150px;
     border-radius: 40px;
     margin-top: 20px;
 }
 
+footer{
+    height: 100px;
+    width: 100%;
+    background-color: cadetblue;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    
+}
+
 @media only screen and (max-width:700px)
 {
 
     .colunas {
-        
         display: block;
-        margin-left: 25%;
+        margin-left:40%;
     }
-    
-    
+
+    .catalago{
+        height: 200px;
+        width: 200px;
+        border-radius: 40px;
+        margin-top: 20px;
+    }
+     
 }
